samples/_failures_safe/1761664603_0a0955_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23dec1d7.c: In function ‘main’:
./samples/SAFE/__tmp_23dec1d7.c:152:33: error: expected ‘)’ at end of input
  152 |         if (choice < 1 || choice
      |            ~                    ^
      |                                 )
./samples/SAFE/__tmp_23dec1d7.c:152:9: error: expected declaration or statement at end of input
  152 |         if (choice < 1 || choice
      |         ^~
./samples/SAFE/__tmp_23dec1d7.c:152:9: error: expected declaration or statement at end of input
